modified:   404.html 	modified:   app.css 	modified:   dailyMeme(beta).html 	modified:   ghost.js 	modified:   index.html 	new file:   logonb.png

--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 
 <body>
     <div class="headdiv">
-        <a class="headlink" href="https://search.abenaws.dev">Search Engine</a>
         <a class="headlink" href="https://github.com/abenaws">Github</a>
         <a class="headlink" href="mailto:AbeNaws@abenaws.dev">Contact</a>
         <a class="headlink" href="https://github.com/AbeNaws/AbeNaws.dev">Source Code</a>
     </div>
     <div class="main">
-        <h1 class="text">Hello World</h1>
-        <h1 class="ghost">Hello World</h1>
+      <div class="logo">
+        <img src="logonb.png" class="text" alt="logo" width="25%">
+        <img src="logonb.png" class="ghost" width="25%" >
+      </div>
     </div>
     <script src="ghost.js"></script>
     <div class="projects">
