--- a/404.html
+++ b/404.html
@@ -79,7 +79,7 @@
     <h1>404 - Page Not Found</h1>
     <p>The page you are looking for does not exist or has been moved.</p>
     <p>You can go back to the <a href="/">home page</a> or try something else.</p>
-    <img src="logo.png" alt="logo">
+    <img src="logonb.png" alt="logo">
 </body>
 
 </html>
