--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a class="headlink" href="https://github.com/abenaws">Github</a>
         <a class="headlink" href="mailto:AbeNaws@abenaws.dev">Contact</a>
         <a class="headlink" href="https://github.com/AbeNaws/AbeNaws.dev">Source Code</a>
+        <a class="headlink" href="hazel/index.html">Image Converter</a>
     </div>
     <div class="main">
       <div class="logo">
